--- a/twitter/Base.lproj/Main.storyboard
+++ b/twitter/Base.lproj/Main.storyboard
@@ -72,11 +72,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="114" id="6Kf-mB-jnx" customClass="TweetCell">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="114"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetCell" rowHeight="293" id="6Kf-mB-jnx" customClass="TweetCell">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="293"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6Kf-mB-jnx" id="RGf-DO-e2C">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="113.66666666666667"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="292.66666666666669"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aJl-Bv-vP7">
@@ -130,12 +130,16 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FMQ-b5-ofO">
+                                                    <rect key="frame" x="31" y="105.66666666666667" width="313" height="184.33333333333331"/>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="WlD-MO-mkp" firstAttribute="top" secondItem="VYG-HE-jch" secondAttribute="bottom" constant="8" id="0Ot-Bi-203"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="wcw-Xp-3Rp" secondAttribute="bottom" constant="8" id="3of-XT-5mn"/>
                                                 <constraint firstItem="wcw-Xp-3Rp" firstAttribute="leading" secondItem="gIC-Vq-bla" secondAttribute="trailing" constant="37" id="58v-Bn-JeT"/>
+                                                <constraint firstItem="FMQ-b5-ofO" firstAttribute="bottom" secondItem="RGf-DO-e2C" secondAttribute="bottomMargin" constant="8" id="60Q-XF-s4a"/>
                                                 <constraint firstItem="Icr-a7-d0F" firstAttribute="centerY" secondItem="VYG-HE-jch" secondAttribute="centerY" id="BdC-ft-PPz"/>
+                                                <constraint firstItem="FMQ-b5-ofO" firstAttribute="top" secondItem="wcw-Xp-3Rp" secondAttribute="bottom" constant="8" id="FF0-2Y-EgH"/>
                                                 <constraint firstItem="aJl-Bv-vP7" firstAttribute="top" secondItem="RGf-DO-e2C" secondAttribute="top" constant="8" id="JY0-nF-Xah"/>
                                                 <constraint firstItem="VYG-HE-jch" firstAttribute="top" secondItem="RGf-DO-e2C" secondAttribute="top" constant="10" id="O4B-zq-m9h"/>
                                                 <constraint firstAttribute="trailing" secondItem="wcw-Xp-3Rp" secondAttribute="trailing" constant="8" id="Rd6-Bi-dSA"/>
@@ -145,15 +149,17 @@
                                                 <constraint firstAttribute="trailing" secondItem="WlD-MO-mkp" secondAttribute="trailing" constant="8" id="aRm-jk-TkB"/>
                                                 <constraint firstItem="wcw-Xp-3Rp" firstAttribute="top" secondItem="gIC-Vq-bla" secondAttribute="top" id="bMp-9Y-yEV"/>
                                                 <constraint firstItem="Icr-a7-d0F" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="VYG-HE-jch" secondAttribute="trailing" constant="20" id="c5w-xL-Zfy"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="FMQ-b5-ofO" secondAttribute="trailing" constant="16" id="ff2-1g-kcX"/>
                                                 <constraint firstItem="gIC-Vq-bla" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="RGf-DO-e2C" secondAttribute="leadingMargin" constant="8" id="hpb-rO-nVb"/>
                                                 <constraint firstItem="gue-oZ-uqG" firstAttribute="centerY" secondItem="VYG-HE-jch" secondAttribute="centerY" id="n5P-ZI-kfn"/>
+                                                <constraint firstItem="FMQ-b5-ofO" firstAttribute="leading" secondItem="RGf-DO-e2C" secondAttribute="leadingMargin" constant="16" id="rq3-P2-J9x"/>
                                                 <constraint firstItem="aJl-Bv-vP7" firstAttribute="leading" secondItem="RGf-DO-e2C" secondAttribute="leading" constant="8" id="w6x-tJ-Jt5"/>
                                                 <constraint firstItem="WlD-MO-mkp" firstAttribute="leading" secondItem="aJl-Bv-vP7" secondAttribute="trailing" constant="8" id="xud-gO-25W"/>
                                                 <constraint firstItem="wcw-Xp-3Rp" firstAttribute="top" secondItem="WlD-MO-mkp" secondAttribute="bottom" constant="8" id="y8f-MI-MXP"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="aJl-Bv-vP7" secondAttribute="bottom" constant="20" id="zP4-lc-LGa"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="embeddedMediaView" destination="FMQ-b5-ofO" id="o6b-tf-yQl"/>
                                             <outlet property="favoriteButton" destination="wcw-Xp-3Rp" id="kvC-Qm-ghc"/>
                                             <outlet property="nameLabel" destination="VYG-HE-jch" id="MFc-le-Ljw"/>
                                             <outlet property="profilePicView" destination="aJl-Bv-vP7" id="fR5-6W-L6P"/>
